<resources>
    <string name="app_name">Trang chủ</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="emaiil">Emaiil</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">Nu than hy lap</string>
    <string name="content">content</string>
    <string name="demo_retrofit2_dang_nhap_he_thong">Đăng nhập vào hệ thống </string>
    <string name="demo_retrofit2_nhap_tai_khoan">Nhập vào tài khoản</string>
    <string name="demo_retrofit2_nhap_mat_khau">Nhập vào mật khẩu</string>
    <string name="dangki">Đăng kí</string>
    <string name="dangnhap">Đăng nhập</string>
    <string name="dangkisinhvien">Đăng kí sinh viên</string>
    <string name="demo_retrofit2_dang_ki_huy">Hủy</string>
    <string name="demo_retrofit2_dang_ki">Xác nhận</string>
    <string name="retrofit">Retrofit</string>
    <string name="enter_post">Enter Post</string>
    <string name="dan_kien_tra_on">Một đàn kiến sa vào vũng nước vùng vẫy mãi mà không thoát ra được. Một chú chim nhỏ vừa ra khỏi tổ trên cành cây gần bên thấy động lòng thương liền nói các bạn chờ tớ một chút tớ sẽ đến ngay, chú bay vụt ra nhặt mấy cọng rác thả xuống làm cầu cho đàn kiến thoát.
    Ngày tháng trôi qua, chú chim ấy cũng không còn nhớ đến đàn kiến nọ. Lại nói loài chim nhỏ này rất thích làm tổ trên cành sơn trà bởi vì cành cây tua tủa những gai nhọn hoắt. Sơn trà dùng gai làm vũ khí chống kẻ thù và khi ấy sơn trà che chở luôn cho cả tổ chim nữa.
    Một hôm con mèo rừng xám bất chấp gai góc cứ tìm cách lần mò tới gần tổ chim nọ.Song cả một đàn kiến dày đặc đã nhanh chóng tản đội hình ra khắp cành sơn trà có tổ chim. Mèo rừng hốt hoảng bỏ chạy ngay bởi nó nhớ có lần kiến lọt vào tai đốt đau nhói.</string>
    <string name="thay_tu_rom">Xưa có một con Sói rừng vừa hung ác vừa gian giảo. Một hôm nó nghe tin ở làng bên có một chú bé bị ốm liền nghĩ ra một kế độc để ăn thịt thằng bé.Nó trang điểm thành một thầy tu : Ðầu đội mũ thánh hồng, khoác bộ áo thánh trắng, đi đôi giày thánh vàng,
    đeo một chuỗi tràng hạt vào cổ, kẹp một quyển kinh ở nách trái, tay phải chống một cây gậy. Hắn đến làng bên.
    Vừa vào làng, sói ta lớn tiếng hát các bài kinh,mọi người ùa cả ra vây lấy thầy tu. Bố mẹ đứa trẻ ốm rất đỗi vui mừng,hai người lập tức mời thầy tu về mổ gà mổ dê thịnh tình đãi khách, họ cầu xin thầy tu cứu chữa con họ</string>
    <string name="tinh_ban_cua_rai_ca">Tuyết rơi liên miên nhiều ngày đêm trong tháng Giấc ngủ lớn. Một cơn bão khủng khiếp có gió cực mạnh như ngựa lồng khắp cả nước, xoá đi tất cả dấu chân của các con vật chạy bão ẩn núp vào các hang hốc.
    Cái đói – người khách không được nghênh tiếp – hoan hỉ bám riết những căn nhà buộc người da đỏ phải xông vào bão tố để kiếm cái ăn. Nhưng họ thường về tay không, mệt nhọc bao nhiêu mà không tìm nổi vết chân thú trong tuyết.
    Tiếng tru của những con sói đói vượt lên trên tiếng gió gào nghe rợn người, nhưng cái làm người ta sợ nhất là tiếng khóc của những đứa trẻ đang chết dần vì đói.</string>
    <string name="vet_va_chau_chau">Khoa La là tên một con vẹt, mỏ nó vừa đẹp vừa linh hoạt. Nó có thể mổ châu chấu trong các bụi cỏ rất chi là tự nhiên. Nó thấy loại côn trung xanh này ngọt và ngon nên sau mỗi lần chén no nê xong nó bỏ những phần thừa vào một chỗ dự trữ.
    Chẳng bao lâu sau châu chấu không chịu cam phận. Chúng cững muốn được sống tự do. Thế là chúng vùng dậy phản kháng. Ðể chống lại kẻ thù chúng chúng bí mật tổ chức một “liên minh chấu chấu” và lên kế hoạch hành động cụ thể.
    Hôm đó vẹt Khoa La lượn một hồi lâu mà chẳng bắt được con châu chấu nào đành nhịn đói quay về. Hôm sau vẫn thế, vẹt KHoa La buộc phải dùng đến thức ăn trong kho dự trữ.</string>
    <string name="heo_rung_va_tho">Có con Heo rừng đang ăn đêm trong nương khoai thì bị mắc bẫy. Một chân sau của nó bị vòng bẫy treo lơ lửng khỏi mặt đất, nhưng càng giẫy giụa thì vòng bẫy càng thắt chặt vào.
    Trời gần sáng rồi.
    Bỗng Heo rừng liền giận dữ quay ngoắt đầu lại cắn đứt cái chân sau của nó đang vướng trong bẫy, rồi tập tễnh bước nhanh vào rừng. Một con Thỏ thấy Heo rừng chân cụt đẫm máu, bèn hỏi ra đầu đuôi câu chuyện. Thỏ khen Heo rõ thật là gan.
    Heo rừng đáp:
    – Có gan góc gì đâu, chẳng qua ở lại đó thì sẽ bị giết thịt, thà mất một chân mà được trả lại với rừng có phải hơn không?</string>
    <string name="chim_son_ca">Bụi trường xuân vừa ra hoa, Sơn Ca lập tức đoán ra ngay cái nguy cơ rình rập loài có lông vũ. Tập hợp các loài chim lại, nó lên tiếng thuyết phục chúng:
    – Tốt hơn hết là nên hạ cây sồi có bụi trường xuân mọc trên đó. Nếu không làm nổi việc đó thì nên bay đến gặp loài người để cầu xin họ đừng dùng bụi trường xuân để săn chim.
    Nhưng các loài chim không nghe lời và chế nhạo nó. Sơn Ca liền bay đi để gặp loài người để xin điều đó. Nhờ sự khôn lanh của nó, loài người đã chịu để nó sống bên cạnh mình. Chính vì thế các loài chim khác đều bị loài người bắt ăn thịt, chỉ riêng có loài Sơn Ca xin được nương náu bên cạnh loài người là không bị đụng đến, được loài người cho phép xây tổ bình yên trong nhà của họ.
    Truyện ngụ ngôn này cho thấy ai có khả năng nhìn thấy trước sự việc thì dễ dàng tránh khỏi những cảnh hiểm nghèo.</string>
    <string name="ong_lao_va_con_lua">Ông lão nhà quê và đứa cháu bàn nhau đem con lừa ra hội chợ bán. Để con lừa khỏi mệt mỏi hầu có thể bán được giá cao, họ buộc chân lừa lại và hai ông cháu khệ nệ gánh con lừa đi.
    Đi được một đoạn, người đi đường thấy thế phá ra cười và bảo: “Có con lừa mà không chịu cỡi lại khiêng nó. Sao mà ngu thế!” Ông lão nhận thấy mình ngu thật, vội để con lừa xuống, cởi trói cho nó, và để đứa cháu cỡi lên lưng lừa, còn ông thì đi theo sau.
    Một lúc sau, khách bộ hành trông thấy thế, mắng thằng cháu: “Mày là đồ bất hiếu bất mục! Sao lại để Ông mày già yếu thế mà đi bộ. Chính mày phải đi bộ mới phải!” Một lần nữa, nghe theo ý khách bộ hành, Ông già leo lên lưng con lừa, đứa cháu bước theo sau.
    Đến một đoạn đường khác, ba cô gái đi qua thấy vậy, một cô bảo: “Tội nghiệp thằng bé, phải đi khập khễnh theo sau, trong khi ông già tưởng mình khôn ngoan lại ngồi chễm chệ trên lưng lừa!” Ông già nhận thấy ý kiến đúng, bảo thằng cháu cùng lên ngồi trên lưng lừa.
    Rồi một toán người khác đi ngang qua lại phê bình: “Sao lại bắt con lừa đáng thương ấy chở nặng như vậy? Họ không biết thương hại con vật già nua của họ tí nào cả. Ra đến hội chợ thì họ chỉ còn mảnh da lừa để bán!” Một lần nữa, hai ông cháu xuống đi bộ, để con lừa đi thong dong đằng trước.
    Vẫn chưa hết, một khách qua đường thấy vậy than rằng: “Sao họ không để con lừa vào lồng kính mà thờ! Họ đi mòn giầy của họ để bảo vệ con lừa. Đúng là ba con lừa!”
    Bấy giờ Ông lão mới trả lời: “Vâng, chính tôi là con lừa! Nhưng từ nay về sau, dù người ta khen hay chê tôi, dù người ta nói điều gì hay không nói điều gì, tôi chỉ làm theo đầu óc của tôi mà thôi!”</string>
    <string name="seu_cua_va_bay_ca">Ở ven hồ kia, có một con sếu rất tinh ma xảo quyệt. Hằng ngày sếu kiếm ăn quanh quẩn trong hồ, hễ con cá nào vừa nhô lên mặt nước hoặc rơi vào bờ là sếu mổ chết ngay. Hồ sẵn cá, tôm, cua, ếch… nên sếu chẳng bao giờ bị đói. Tuy đầy đủ thế song sếu vẫn chưa vừa ý, nó chỉ muốn ăn cho thoả thích đến không còn một con cua, con cá nào trong hồ nữa thì thôi.</string>
    <string name="soi_va_de">Một con Dê bị tụt phía sau đàn, bị con Sói theo đuổi sát. Dê quay lại, nói với Sói:
    – Thưa ngài, tôi biết thân phận mình phải hiến dâng cho ngài. Nhưng để ngài thưởng thức món ăn đựơc ngon, ngài hãy thổi sáo và tôi múa nhảy cho mà xem.
    Sói bắt đầu thổi sáo cho Dê nhảy quay cuồng. Lũ chó nhà nghe tiếng huyên náo bèn nhảy ra đuổi Sói.
    Sói vừa chạy vừa quay đầu lại nói với Dê:
    – Ta chịu thua ngươi vì ta vốn anh hàng thịt lại giở trò làm nhạc công, nên bỏ lỡ mất thời cơ.</string>
    <string name="lua_va_la">Lừa và La cùng đi đường. Hai con cùng chở hàng bằng nhau. Lừa càu nhàu là La cũng mang bằng nó nhưng nhận phần thức ăn gấp đôi. La lẳng lặng không nói gì. Được một quãng, Lừa thấm mệt.
    Người chủ hàng lấy bớt một phần hàng trên lưng Lừa chuyển sang cho La. La không phàn nàn gì, tiếp tục đi. Được một quãng đường nữa, Lừa càng đuối sức. Chủ hàng lại lấy thêm hàng chuyển sang cho La. Trên lưng Lừa hầu như chẳng còn hàng hoá gì nữa, lẽo đẽo đi sau, vừa đi vừa thở hổn hển. Khi ấy, La quay lại bảo Lừa:
    – Này bạn thân mến, tôi đáng được hưởng gấp đôi phần ăn đấy chứ?
    Vì vậy, khi ta xét đoán công việc mọi ngưòi không phải ở lúc bắt đầu, mà là ở khi kết thúc.</string>
    <string name="su_tich_dua_hau">gày xưa, Vua Hùng Vương thứ 18 có nuôi một đứa trẻ thông minh khôi ngô, đặt tên là Mai Yển, hiệu là An Tiêm.
    Lớn lên, vua cưới vợ cho An Tiêm, và tin dùng ở triều đình. Cậy nhờ ơn Vua cha, nhưng An Tiêm lại kiêu căng cho rằng tự sức mình tài giỏi mới gây dựng được sự nghiệp, chứ chẳng nhờ ai. Lời nói này đến tai vua, vua cho An Tiêm là kẻ kiêu bạc vô ơn, bèn đày An Tiêm cùng vợ con ra một hòn đảo xa, ở ngoài biển Nga Sơn (Thanh Hoá, Bắc Việt).
    Người vợ là nàng Ba lo sợ sẽ phải chết ở ngoài cù lao cô quạnh, nhưng An Tiêm thì bình thản nói: “Trời đã sinh ra ta, sống chết là ở Trời và ở ta, việc gì phải lo”.
    Hai vợ chồng An Tiêm cùng đứa con đã sống hiu quạnh ở một bãi cát, trên hoang đảo. Họ ra sức khai khẩn, trồng trọt để kiếm sống. Một ngày kia, vào mùa hạ, có một con chim lạ từ phương tây bay đến đậu trên một gò cát. Chim nhả mấy hạt gì xuống đất. Được ít lâu, thì hạt nẩy mầm, mọc dây lá cây lan rộng.
    Cây nở hoa, kết thành trái to. Rất nhiều trái vỏ xanh, ruột đỏ. An Tiêm bảo vợ: “Giống cây này tự nhiên không trồng mà có tức là vật của Trời nuôi ta đó”. Rồi An Tiêm hái nếm thử, thấy vỏ xanh, ruột đỏ, hột đen, mùi vị thơm và ngon ngọt, mát dịu. An Tiêm bèn lấy hột gieo trồng khắp nơi, sau đó mọc lan ra rất nhiều.</string>
    <string name="su_tich_chim_go_song">Các già làng thường chỉ tay ra con suối trước nhà chảy từ rừng sâu đổ về thung lũng uốn lượn quanh bản trông giống như một con rắn lớn, để bắt đầu câu chuyện về con nước hiền, con nước dữ. Chỉ nghe một lần là người ta nhớ mãi không quên…
    Ở một nơi kia, mãi chỗ tận cùng của con suối có một cái hố thông xuống ruột đất to lắm, sâu lắm. To và sâu đến nỗi nước khắp trời hàng năm rơi xuống, đổ về, không bao giờ đầy. Bên cạnh miệng hố mỗi năm mọc thêm một cây bầu thần kỳ. Hàng năm nõ chỉ đậu một quả. Quả to rất nhanh. Người ta bảo cây bầu ấy do Be Dòng trồng, quả nó che lấp mất lỗ thông xuống ruột đất, nước sẽ ứ ngập khắp trần gian, giết hại loài người và muôn thú.</string>
    <string name="su_tich_con_ve_sau">Ở làng nọ có hai anh em trai, cha mẹ đều mất sớm. Người em còn bé, vì vậy mọi công việc đều đến tay anh, lo toan trong nghèo khó, nhưng người anh hết lòng thương yêu em. Trồng lúa không đủ ăn, họ thường phải sống bằng hái rau, măng, củ mài trên rừng, bắt cá dưới suối. Công việc nặng nhọc anh giành phần mình; trong bữa ăn anh nhường em phần ngon. Mỗi lần đánh được cá, khi ăn anh phần em khúc giữa, còn mình chỉ ăn đầu và đuôi cá. Thấy anh đối xử với mình thường xuyên như vậy, thời gian trôi đi đã để lại cho em những suy nghĩ ích kỷ, vì em chưa bao giờ được ăn đầu cá và đuôi cá, cậu sinh nghi, cho rằng anh mình chả thương yêu gì mình.
    Như thường lệ, hôm ấy hai anh em lên rừng đào củ mài, anh đào bới còn em nhặt củ. Hố đào càng sâu, càng được củ to. Thế nhưng không may anh mất thăng bằng, ngã cắm đầu xuống hố, hai chân chổng ngược lên trời. Hố hẹp lại sâu cho nên anh không tài nào nhúc nhích được, anh nói vọng lên:
    – Em ơi! cứu anh với, kéo anh lên, anh ngạt thở chết mất.</string>
</resources>