<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:id="@+id/tv_dksv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dangkisinhvien"
        android:textSize="@dimen/sp_30"
        android:textColor="@android:color/holo_orange_dark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <ImageView
        android:id="@+id/iv_anh_dksv"
        android:layout_width="@dimen/dp_140"
        android:layout_height="@dimen/dp_140"
        app:layout_constraintTop_toBottomOf="@id/tv_dksv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/dp_20"
        android:src="@drawable/hylap03"
        android:scaleType="fitXY"/>
        <EditText
            android:id="@+id/edt_nhap_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/iv_anh_dksv"
            android:layout_marginTop="@dimen/dp_40"
            android:text="@string/demo_retrofit2_nhap_tai_khoan"/>
    <EditText
        android:id="@+id/edt_nhap_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberPassword"
        android:text="@string/demo_retrofit2_nhap_mat_khau"
        app:layout_constraintTop_toBottomOf="@id/edt_nhap_user"
        android:layout_marginTop="@dimen/dp_20"/>
    <Button
        android:id="@+id/btn_huy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/demo_retrofit2_dang_ki_huy"
        app:layout_constraintTop_toBottomOf="@id/edt_nhap_password"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginLeft="@dimen/dp_40"
        />
    <Button
        android:id="@+id/btn_xac_nhan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/demo_retrofit2_dang_ki"
        app:layout_constraintTop_toBottomOf="@id/edt_nhap_password"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_40"/>


</androidx.constraintlayout.widget.ConstraintLayout>